<resources>
    <string name="app_name">Make a Simple Game</string>

    <string name="player">Player</string>
    <string name="vs">VS</string>
    <string name="computer">Computer</string>

    <string name="who_win">Who is winner?</string>

    <string name="rock">Rock</string>
    <string name="scissors">Scissors</string>
    <string name="paper">Paper</string>
    <string name="simple_game">The Simple Game Hompimpang</string>
</resources>